072 ==> 208504 : Add type icon to images under the thumbnail.
073 ==> 268098 : Usability enhanced showing format of each photo in its background frame with BIG letters.
074 ==> 268300 : digiKam crash on confirm create new person.
075 ==> 267262 : digiKam not compliant with "Metadata Working Group" specification when reading caption.
076 ==> 266735 : digiKam displays no images: "unable to create io-slave" (OS X).
077 ==> 268925 : The editor 'forgets' one step when a crop is undone and redone.
078 ==> 268924 : Versioning fails to save a new version as a JPEG2000.
079 ==> 269418 : Possibility of having the tag hierarchy also written in the Xmp.MicrosoftPhoto.LastKeywordXMP field.
080 ==> 269378 : Not assigned face tags showing up.
081 ==> 269458 : digiKam 2.0.0-beta3 crash while assigning face tags.
082 ==> 269312 : Wish Rename file extension.
083 ==> 269903 : Libkdcraw no longer compiles due to a linking error [patch].
084 ==> 269862 : Libkmap compilation fails because of changes in MarbleWidget [patch].
085 ==> 269435 : digiKam does not display any picture from any source.
086 ==> 246074 : Can't export photos to Picasaweb (with gwenview it's works fine).
087 ==> 252700 : Font color for icons in toolbar does not change for darker Themes.
088 ==> 168669 : Disabled entry menu seems more important and active in dark theme.
089 ==> 241116 : [Themes] Cannot change text colour in menu bar.
090 ==> 220068 : Dark theme: active item in menu is hardly different than others items.
091 ==> 250265 : Black background of short summary display.
092 ==> 257803 : Grey font on grey context (Obsidian Coast colour scheme).
093 ==> 266086 : digiKam 2.0.0-beta2 crashed after closing it.
094 ==> 265554 : Problem in colors between dgikam's theme and Gnome appearance.
095 ==> 270553 : Import Wizard: Selecting "date" in File Renaming Options does not work.
096 ==> 270728 : CMakeLists.txt:159 doesn't specify which target needs to link to QtScript library.
097 ==>